--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+.appwrapper {
+  margin: 0 auto;
+  width: 1280px;
+  min-height: 500px;
+  display: grid;
+
+grid-template-areas:
+  "h h"
+  "n c";
+
+grid-template-rows: 100px 1fr;
+grid-template-columns: 2fr 10fr;
+/* grid-gap: 1px;  */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.appwrappercontent {
+  grid-area: c;
+  text-align: left;
+  background-color: cornflowerblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Polaroid {
+  min-height: 150px;
+  background: url('https://mathmunch.files.wordpress.com/2013/07/summer.jpg') right no-repeat;
+  background-size: cover
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
