--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,10 @@
 .descriptionBlock {
     padding: 10px;
 }
+
+.item img {
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+    margin: 15px 10px 1px 15px
+}
