--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,3 +1,15 @@
-.selectedPage {
+
+.paginator {
+    margin: 15px;
+}
+
+.pageNumber {
+    padding: 2px;
+    border: 1px solid pink;
+}
+
+
+.pageNumber.selectedPage {
     font-weight: bold;
+    border-color: black;
     }
