--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -3,8 +3,12 @@
 }
 
 .item img {
-    width: 80px;
-    height: 80px;
-    border-radius: 10px;
-    margin: 15px 10px 5px 10px
+    width: 110px;
+    height: 110px;
+    border-radius: 20px;
+    margin: 15px 10px 0px 15px
+}
+
+.mainPhoto {
+    max-width: 200px;
 }
